updated libraries and angular