@@ -19,8 +19,8 @@ allprojects {
     apply plugin: "java"
     apply plugin: "groovy"
 
-    sourceCompatibility = JavaVersion.VERSION_13
-    targetCompatibility = JavaVersion.VERSION_13
+    sourceCompatibility = JavaVersion.VERSION_14
+    targetCompatibility = JavaVersion.VERSION_14
 
     repositories {
         jcenter()
@@ -31,27 +31,26 @@ allprojects {
     }
 
     ext {
-        angularVersion = "8.3.23"
-        annotationVersion = "18.0.0"
+        angularVersion = "9.1.7"
+        annotationVersion = "19.0.0"
         rlibVersion = "9.9.0"
-        lombokVersion = '1.18.10'
-        springbootVersion = '2.2.4.RELEASE'
-        springVersion = '5.2.3.RELEASE'
-        junitJupiterVersion = "5.6.0"
+        lombokVersion = '1.18.12'
+        springbootVersion = '2.3.0.RELEASE'
+        springVersion = '5.2.6.RELEASE'
+        junitJupiterVersion = "5.6.2"
         hikariCPVersion = "2.7.8"
-        flywayVersion = "6.0.4"
-        jsointerVersion = "0.9.23"
-        testcontainersVersion = "1.12.5"
-        groovyVersion = "2.5.8"
-        spockVersion = "1.2-groovy-2.5"
+        flywayVersion = "6.4.2"
+        testcontainersVersion = "1.14.3"
+        groovyVersion = "3.0.4"
+        spockVersion = "2.0-M2-groovy-3.0"
         postgresqlVersion = "42.1.1"
-        javassistVersion = "3.25.0-GA"
-        jsonwebtokenVersion = "0.10.7"
+        javassistVersion = "3.27.0-GA"
+        jsonwebtokenVersion = "0.11.1"
         hamcrestVersion = "1.3"
         jsonpathVersion = "2.4.0"
-        jasyncVersion = "1.0.14"
-        projectReactorVersion = "3.3.2.RELEASE"
-        jacksonVersion = "2.10.2"
+        jasyncVersion = "1.1.0"
+        projectReactorVersion = "3.3.5.RELEASE"
+        jacksonVersion = "2.11.0"
     }
 
     dependencies {
@@ -97,10 +96,26 @@ allprojects {
     artifacts {
         testArtifacts testJar
     }
-
+    
+    test {
+        useJUnitPlatform()
+        testLogging {
+            events "passed", "skipped", "failed"
+        }
+    }
+    
     tasks.withType(Test) {
         maxParallelForks = 2
         forkEvery = 100
+        jvmArgs += "--enable-preview"
+    }
+    
+    tasks.withType(JavaCompile) {
+        options.compilerArgs += "--enable-preview"
+    }
+    
+    tasks.withType(GroovyCompile) {
+        options.forkOptions.jvmArgs += "--enable-preview"
     }
     
     processResources {
@@ -159,6 +174,6 @@ task buildSingleArtifactWithoutTests(type: GradleBuild) {
 }
 
 wrapper {
-    gradleVersion = '6.1'
+    gradleVersion = '6.4.1'
     distributionType = Wrapper.DistributionType.ALL
 }
